lab03/04/bitbucket/bitbucket-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bitbucket
  namespace: education-dev2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitbucket
  template:
    metadata:
      labels:
        app: bitbucket
    spec:
      volumes:
        - name: bitbucket-appdata
          persistentVolumeClaim:
            claimName: bitbucket-pvc
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: bitbucket
          ports:
            - name: bitbucket-http
              containerPort: 7990
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: bitbucket-appdata
              mountPath: /var/atlassian/application-data/bitbucket
          terminationMessagePolicy: File
          image: atlassian/bitbucket-server
